# tdesk

.github/workflows/: pylint.yml
backend/: manage.py  pyproject.toml
backend/tdesk/: api.py  asgi.py  schema.py  service.py  settings.py  wsgi.py
backend/tdesk/utils/: difficulty_option.py  puzzle_data.py  random_words.txt  word_position.py  worksheet.py
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/api/: index.js  url.js
frontend/src/api/functions/: wordsearch.js
frontend/src/components/: OptionSelection.vue  SmallButton.vue  SuggestionTile.vue  TdInput.vue
frontend/src/components/icons/: IconDownload.vue  IconHeart.vue  IconPlus.vue
frontend/src/components/navbar/: NavbarHeader.vue  NavbarItem.vue
frontend/src/components/wordsearch/: LangSelection.vue  WordsearchTemplate.vue
frontend/src/components/worksheet/: WorksheetCard.vue  WorksheetOption.vue  WorksheetOptionList.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  HomeView.vue  SuggestionView.vue  WorksheetSelectionView.vue  WorksheetView.vue
frontend/src/views/wordsearch/: EnglishWordsearchView.vue  KoreanWordsearchView.vue
frontend/src/views/worksheet/: BoardView.vue  DobbleView.vue
